Bug 279424 - marble/monav relies on street/road names for turn by turn instructions. no names equals no directions.
Summary: marble/monav relies on street/road names for turn by turn instructions. no na...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
: 278656 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-05 07:44 UTC by bugspamme2012
Modified: 2011-12-05 20:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bugspamme2012 2011-08-05 07:44:34 UTC
Version:           unspecified (using KDE 1.2) 
OS:                Linux

a route involving roads or streets with no names misses out on turn by turn instructions. streets with no names are easy to find on the map of ireland and more difficult in other maps (e.g. germany)

Reproducible: Always

Steps to Reproduce:
go into offline mode to use monav. plan a route involving turn events where the route contains a street/road with no name turning into another street with no name and the turning instruction is ignored/not seen by marble.

Actual Results:  
turn by turn instructions wrong.

Expected Results:  
whether a street or road has a name associated with it in openstreetmap data should not matter, and turning instructions should not rely on every road having a name associated with it. 

this problem affects the ireland map to a very large extent, not so much the german map.

more info and examples in bug 278656. you can mark this or bug 278656 as a duplicate if you see fit..
Comment 1 bugspamme2012 2011-08-06 12:55:33 UTC
*** Bug 278656 has been marked as a duplicate of this bug. ***
Comment 2 bugspamme2012 2011-08-06 13:11:08 UTC
after talking with the developer on another public forum it looks like marble
does some of the routing instead of leaving it all up to monav, and it's had
disasterous results in my opinion as marble is useless in ireland and all other
regions with either no street names or duplicate street names (large housing
estates for instance).

if the reason for this marble involvment in routing it to 'cut down on noise'
in routing instructions, wouldn't it be better to push this issue upstream to
monav or at least give the user a routing option to use only monav instead of a
'marble enhanced' version of monav routing?

there is no such 'enhancment' for online routing, and this therefore works as
expected(i.e. routes correctly).

we should leave routing to monav and push any routing issues to that project.
Comment 3 Dennis Nienhüser 2011-12-05 18:14:28 UTC
The monav-routing-daemon only delivers the route, not the turn instructions. Marble has to generate them on its own (similarly does it the monav client application). Therefore it's not possible to use monav's instructions as they do not exist when using the monav daemon.

I'll look into generating instructions for streets with no names, though.
Comment 4 Dennis Nienhüser 2011-12-05 20:30:30 UTC
Git commit fed1d47207537a2a6e3d7c78b741e0ea3671aded by Dennis Nienhüser.
Committed on 05/12/2011 at 21:13.
Pushed by nienhueser into branch 'master'.

Improve where the streets have no names.

Generate turn instructions when entering an unnamed street. Note that
currently this will generate a number of false positives (instructions
somewhere in the middle of an unnamed street) because monav often
reports waypoints to be intersections when they are not. Using the same
heuristic as the monav client to avoid this (suppress instructions when
going into mostly straight direction). Appararently this is not
perfect.
BUG: 279424
FIXED-IN: 1.2.90

M  +13   -2    src/lib/routing/instructions/InstructionTransformation.cpp
M  +10   -2    src/lib/routing/instructions/RoutingInstruction.cpp
M  +1    -1    src/lib/routing/instructions/RoutingInstruction.h
M  +2    -1    src/lib/routing/instructions/RoutingWaypoint.h
M  +1    -1    src/plugins/runner/monav/MonavRunner.cpp

http://commits.kde.org/marble/fed1d47207537a2a6e3d7c78b741e0ea3671aded